// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Others 1`] = `undefined`;

exports[`Others 2`] = `
Array [
  Variable {
    "blockNames": Array [
      "test",
    ],
    "blockType": "variable",
    "name": "test",
  },
  Variable {
    "blockNames": Array [
      "test2",
    ],
    "blockType": "variable",
    "name": "test2",
  },
  Data {
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "name": "test",
    "type": "aws_vpc",
  },
  Module {
    "blockNames": Array [
      "test",
    ],
    "blockType": "module",
    "name": "test",
  },
  Resource {
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "resource",
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "blockNames": Array [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "blockNames": Array [
      "aws_vpc",
      "test2",
    ],
    "blockType": "data",
    "name": "test2",
    "type": "aws_vpc",
  },
  Resource {
    "blockNames": Array [
      "innerBlock",
      "innerBlock",
    ],
    "blockType": "resource",
    "name": "innerBlock",
    "type": "innerBlock",
  },
  Locals {
    "blockNames": Array [],
    "blockType": "locals",
  },
  Resource {
    "blockNames": Array [
      "locals",
      "locals",
    ],
    "blockType": "resource",
    "name": "locals",
    "type": "locals",
  },
  Provisioner {
    "blockNames": Array [
      "provisioner",
    ],
    "blockType": "provisioner",
    "type": "provisioner",
  },
  Resource {
    "blockNames": Array [
      "tags",
      "tags",
    ],
    "blockType": "resource",
    "name": "tags",
    "type": "tags",
  },
  Resource {
    "blockNames": Array [
      "tfg2",
      "tfg2",
    ],
    "blockType": "resource",
    "name": "tfg2",
    "type": "tfg2",
  },
]
`;

exports[`Others 3`] = `
Object {
  "test2": "test",
}
`;

exports[`Others 4`] = `
Object {
  "tf": "variable \\"test\\"{
type = string
}

variable \\"test2\\"{
type = string
}

data \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
}

module \\"test\\"{
source = \\"./test\\"
}

resource \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
tags = {
a = \\"a\\"
}
}

data \\"aws_vpc\\" \\"test\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

data \\"aws_vpc\\" \\"test2\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

resource \\"innerBlock\\" \\"innerBlock\\"{
a = \\"a\\"
provisioner \\"local-exec\\"{
command = \\"echo hello\\"
}
provisioner \\"local-exec\\"{
command = \\"echo world\\"
}
}

locals{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"locals\\" \\"locals\\"{
a = local.a
}

provisioner \\"provisioner\\"{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"tags\\" \\"tags\\"{
tags = {
a = \\"a\\"
\\"b c d\\" = \\"b c d\\"
}
}

resource \\"tfg2\\" \\"tfg2\\"{
tfg2 = \\"tfg2\\"
}

",
  "tfvars": "test2 = \\"test\\"

",
}
`;

exports[`Others 5`] = `
"variable \\"test\\"{
type = string
}

variable \\"test2\\"{
type = string
}

data \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
}

module \\"test\\"{
source = \\"./test\\"
}

resource \\"aws_vpc\\" \\"test\\"{
cidr_block = \\"test\\"
tags = {
a = \\"a\\"
}
}

data \\"aws_vpc\\" \\"test\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

data \\"aws_vpc\\" \\"test2\\"{
filter {
name = \\"tag:a\\"
values = [
\\"a\\"
]
}
cidr_block = \\"test\\"
}

resource \\"innerBlock\\" \\"innerBlock\\"{
a = \\"a\\"
provisioner \\"local-exec\\"{
command = \\"echo hello\\"
}
provisioner \\"local-exec\\"{
command = \\"echo world\\"
}
}

locals{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"locals\\" \\"locals\\"{
a = local.a
}

provisioner \\"provisioner\\"{
a = \\"a\\"
b = 123
c = aws_vpc.test.x
}

resource \\"tags\\" \\"tags\\"{
tags = {
a = \\"a\\"
\\"b c d\\" = \\"b c d\\"
}
}

resource \\"tfg2\\" \\"tfg2\\"{
tfg2 = \\"tfg2\\"
}

"
`;

exports[`Others 6`] = `
"test2 = \\"test\\"

"
`;
